--- a/todo-service/todo-service/build.gradle
+++ b/todo-service/todo-service/build.gradle
@@ -29,13 +29,13 @@ dependencies {
 	testImplementation 'io.projectreactor:reactor-test'
 
 	// Spock Framework
-	testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
-	testImplementation 'org.spockframework:spock-spring:2.0-groovy-3.0'
+	testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
+	testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
 
 	// Needed for Spock
-	testImplementation 'org.codehaus.groovy:groovy-all:3.0.7'
+	testImplementation 'org.apache.groovy:groovy-all:4.0.15'
 	testImplementation 'cglib:cglib-nodep:3.3.0'
-	testImplementation 'org.objenesis:objenesis:3.1'
+	testImplementation 'org.objenesis:objenesis:3.3'
 
 	// Mocking
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
