--- a/todo-service/todo-service/src/main/resources/application.properties
+++ b/todo-service/todo-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/todoDB
+spring.data.mongodb.uri=mongodb://admin:dasspassword@localhost:27017/
+spring.data.mongodb.database=tododb
 
