--- a/user-management/user-service/src/main/resources/application.properties
+++ b/user-management/user-service/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 spring.data.mongodb.uri=mongodb://admin:dasspassword@localhost:27017/
 spring.data.mongodb.database=user-management
 
+server.port=8085
