--- a/todo-service/todo-service/src/main/resources/application.properties
+++ b/todo-service/todo-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.uri=mongodb://admin:dasspassword@localhost:27017/
 spring.data.mongodb.database=tododb
 
+user.service.url=http://localhost:8085
