--- a/todo-service/todo-service/build.gradle
+++ b/todo-service/todo-service/build.gradle
@@ -39,6 +39,10 @@ dependencies {
 
 	// Mocking
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// test containers
+	testImplementation 'org.testcontainers:testcontainers:1.19.2'
+	testImplementation 'org.testcontainers:junit-jupiter:1.19.2'
 }
 
 tasks.named('bootBuildImage') {
