--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     ports:
       - "8080:8080"
     environment:
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9093
       SPRING_PROFILES_ACTIVE: db-seed
       SPRING_DATA_MONGODB_URI: mongodb://admin:dasspassword@mongodb:27017
       USER_SERVICE_URL: http://user-service:8085
@@ -15,7 +16,7 @@ services:
       - user-service
     networks:
       - app-network
-#      - kafka
+      - kafka
 
   user-service:
     build:
@@ -24,13 +25,14 @@ services:
     ports:
       - "8085:8085"
     environment:
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9093
       SPRING_PROFILES_ACTIVE: db-seed
       SPRING_DATA_MONGODB_URI: mongodb://admin:dasspassword@mongodb:27017
     depends_on:
       - mongodb
     networks:
       - app-network
-#      - kafka
+      - kafka
 
   mongodb:
     image: mongo
@@ -41,21 +43,26 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: dasspassword
     networks:
       - app-network
-#  zookeeper:
-#    image: wurstmeister/zookeeper
-#    ports:
-#      - "2181:2181"
-#
-#  kafka:
-#    image: wurstmeister/kafka
-#    ports:
-#      - "9092:9092"
-#    environment:
-#      KAFKA_ADVERTISED_HOST_NAME: kafka
-#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-#    depends_on:
-#      - zookeeper
-#
+
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: wurstmeister/kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    depends_on:
+      - zookeeper
+
+
 #  angular-frontend:
 #    build: ./path/to/angular/frontend
 #    ports:
@@ -67,3 +74,5 @@ services:
 networks:
   app-network:
     driver: bridge
+  kafka:
+      driver: bridge
