--- a/todo-service/todo-service/src/main/resources/application.properties
+++ b/todo-service/todo-service/src/main/resources/application.properties
@@ -6,14 +6,14 @@ user.service.url=http://localhost:8085
 todo.topic.name=todo
 
 # Kafka configuration for local development
-spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.bootstrap-servers=localhost:9092
 
-# Producer configuration
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-
-# Consumer configuration
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.group-id=todo-consumer-group
-spring.kafka.consumer.auto-offset-reset=earliest
+## Producer configuration
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#
+## Consumer configuration
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+#spring.kafka.consumer.group-id=todo-consumer-group
+#spring.kafka.consumer.auto-offset-reset=earliest
