--- a/todo-service/todo-service/build.gradle
+++ b/todo-service/todo-service/build.gradle
@@ -3,11 +3,10 @@ plugins {
 	id 'org.springframework.boot' version '3.1.5'
 	id 'io.spring.dependency-management' version '1.1.3'
 	id 'groovy'
-
 }
 
 group = 'us.dtaylor'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2-SNAPSHOT'
 
 java {
 	sourceCompatibility = '17'
@@ -52,4 +51,10 @@ tasks.named('bootBuildImage') {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.named('bootBuildImage') {
+	builder = 'paketobuildpacks/builder-jammy-base:latest'
+	imageName = "derektaylor/hexagonal-arch:${project.name}-${project.version}"
+	publish = true
 }
