--- a/todo-service/todo-service/docker/Dockerfile
+++ b/todo-service/todo-service/docker/Dockerfile
@@ -5,10 +5,10 @@ FROM openjdk:17-alpine
 WORKDIR /app
 
 # Copy the jar file into the container at /app
-COPY build/libs/todo-service-0.0.1-SNAPSHOT.jar /app/todo-service.jar
+COPY build/libs/*.jar /app/app.jar
 
 # Make port 8080 available to the world outside this container
 EXPOSE 8080
 
 # Run the jar file
-ENTRYPOINT ["java", "-jar", "todo-service.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
