--- a/todo-service/todo-service/src/main/resources/application.properties
+++ b/todo-service/todo-service/src/main/resources/application.properties
@@ -17,3 +17,6 @@ todo.topic.name=todo
 #spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 #spring.kafka.consumer.group-id=todo-consumer-group
 #spring.kafka.consumer.auto-offset-reset=earliest
+
+
+logging.level.org.springframework=DEBUG
