--- a/filewatcher-service/src/main/resources/application.properties
+++ b/filewatcher-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8081
+kafka.topic.name=todo-topic
+filewatcher.directory.path=/Users/derektaylor/projects/hexagonal_arch_tutorial/resources/files
+# Kafka configuration for local development
+spring.kafka.bootstrap-servers=localhost:9092
+# Producer configuration
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+logging.level.org.springframework=DEBUG
