--- a/filewatcher-service/build.gradle
+++ b/filewatcher-service/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'groovy'
+
 }
 
 group = 'us.dtaylor'
@@ -27,9 +29,22 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// Spock Framework
+	testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
+	testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
+
+	// Needed for Spock
+	testImplementation 'org.apache.groovy:groovy-all:4.0.15'
+	testImplementation 'cglib:cglib-nodep:3.3.0'
+	testImplementation 'org.objenesis:objenesis:3.3'
+
+	// Mocking
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+	// test containers
+	testImplementation 'org.testcontainers:testcontainers:1.19.2'
+	testImplementation 'org.testcontainers:junit-jupiter:1.19.2'
 }
 
 tasks.named('test') {
