--- a/todo-service/todo-service/src/main/resources/application.properties
+++ b/todo-service/todo-service/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.kafka.consumer.auto-offset-reset=earliest
 
 
 logging.level.org.springframework=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+spring.security.oauth2.authorizationserver.endpoint.jwk-set-uri=http://localhost:8484/realms/todos/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8484/realms/todos
